[gd_scene load_steps=8 format=3 uid="uid://bc6ameyg4uxe0"]

[ext_resource type="Script" uid="uid://dc1tvaapl2p8h" path="res://GUI/pause_menu/pause_menu.gd" id="1_4w82k"]
[ext_resource type="Texture2D" uid="uid://cm4xyewla2owc" path="res://items/sprites/items.png" id="2_yiq8o"]
[ext_resource type="Script" uid="uid://ixkkykrnn0v0" path="res://GUI/pause_menu/inventory/scripts/inventory_ui.gd" id="3_36pfd"]
[ext_resource type="PackedScene" uid="uid://caibsxojew23" path="res://GUI/pause_menu/inventory/inventory_slot.tscn" id="3_rsqrg"]
[ext_resource type="Resource" uid="uid://db7rqw22en23c" path="res://GUI/pause_menu/inventory/player_inventory.tres" id="4_ewgu5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rsqrg"]
atlas = ExtResource("2_yiq8o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_36pfd"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_rsqrg")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4w82k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 441.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.152941, 0.784314)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 55.0
text = "[PAUSED]"
horizontal_alignment = 1

[node name="Close_Menu" type="Button" parent="Control"]
layout_mode = 0
offset_left = 206.0
offset_top = 30.0
offset_right = 224.0
offset_bottom = 61.0
text = "X"

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 178.0
offset_right = 221.0
offset_bottom = 214.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Alan, please add details."
autowrap_mode = 2

[node name="ItemName" type="Label" parent="Control"]
layout_mode = 0
offset_left = 36.0
offset_top = 158.0
offset_right = 218.0
offset_bottom = 175.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "[PLACEHOLDER_TXT]"
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 228.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxTexture_36pfd")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_36pfd")
data = ExtResource("4_ewgu5")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = 204.0
offset_right = 230.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "SAVE"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "LOAD"

[node name="Button_Quit" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4
